# fastEmbed

./: .env  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  app.cpp  cli_app.cpp  docker-compose.yml  embedding_server.cpp  http_server.cpp  verify_bge_embedding.py  verify_embedding.py  verify_qwen_embedding.py
.github/workflows/: docker-ci-cd.yml
include/: safetensors.h  sentence_transformers.h  sentence_transformers_impl.h  tokenizer.h
include/ops/: attention_ops_interface.h  cpu_matrix_ops.h  cuda_attention_ops.h  cuda_matrix_ops.h  matrix_ops_interface.h
include/ops/cpu/: cpu_attention_ops.h  cpu_matrix_ops.h
include/ops/cuda/: cuda_attention_cublas_ops.cuh  cuda_attention_ops.cuh  cuda_attention_ops.h  cuda_attention_ops.h.bak  cuda_flash_attention.h  cuda_matrix_ops.h
src/: app.cpp  safetensors.cpp  sentence_transformers.cpp  sentence_transformers_impl.cpp  tokenizer.cpp
src/ops/: cpu_ops.cpp  cuda_flash_attention.cu
src/ops/cpu/: cpu_attention_ops.cpp  cpu_matrix_ops.cpp
src/ops/cuda/: cuda_attention_cublas_ops.cu  cuda_attention_ops.cpp  cuda_attention_ops.cu  cuda_attention_ops.cu.bak  cuda_flash_attention.cu  cuda_matrix_ops.cpp  cuda_matrix_ops.cu  cuda_matrix_ops_kernel.cu  cuda_ops.cu
tests/: attention_ops_test.cpp  matrix_ops_test.cpp
